--- a/src/app/components/directives/widgets/notifications/notifications.html
+++ b/src/app/components/directives/widgets/notifications/notifications.html
@@ -1,20 +1,20 @@
-<div ng-repeat="n in notifications" class="hoverable grey-text text-darken-2">
-    <a href="javascript:void(0);" ng-click="markAsRead(n._id)" class="waves-effect waves-teal btn-flat right">
-        <i class="tiny material-icons" ng-if="n.read"
-           title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i><i
-            class="tiny material-icons" ng-if="!n.read"
-            title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i></a>
-    <a href="javascript:void(0);" ng-click="deleteNotification(n._id)"
-       class="waves-effect waves-teal btn-flat right"><i
-            class="tiny material-icons" title="{{'headerMenu.notifications.delete' | translate}}">delete</i></a>
-    {{n.from_user_id.firstname}} {{n.from_user_id.name}}<br>
-    <small>{{n.timestamp | date : 'short'}}</small>
-    <div class="row">
-        <div class="col s2">
-            <img ng-src="{{getAvatar(n.from_user_id.avatar)}}" alt="" class="circle" width="30px">
-        </div>
-        <div class="col s10">
-            <b ng-bind="n.title"></b><br><span class="truncate" ng-bind="n.content"></span>
-        </div>
-    </div>
-</div>
+<ul class="collection grey-text text-darken-2">
+    <li class="collection-item avatar" ng-repeat="n in notifications">
+        <img ng-src="{{getAvatar(n.from_user_id.avatar)}}" alt="" class="circle">
+        <span class="title" ng-bind="n.title"></span>
+        <p><span class="truncate" ng-bind="n.content"></span> <br>
+            <small>{{n.from_user_id.firstname}} {{n.from_user_id.name}} | {{n.timestamp | date : 'short'}} |
+                <a href="javascript:void(0);" ng-click="markAsRead(n._id)" class="waves-effect waves-teal btn-flat"
+                   style="padding: 0;">
+                    <i class="tiny material-icons" ng-if="n.read"
+                       title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i><i
+                        class="tiny material-icons" ng-if="!n.read"
+                        title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i></a>
+                <a href="javascript:void(0);" ng-click="deleteNotification(n._id)" style="padding: 0;"
+                   class="waves-effect waves-teal btn-flat"><i
+                        class="tiny material-icons" title="{{'headerMenu.notifications.delete' | translate}}">delete</i></a>
+            </small>
+        </p>
+        <a href="#/notifications/{{n._id}}" class="secondary-content"><i class="material-icons">forward</i></a>
+    </li>
+</ul>
