--- a/src/app/index.css
+++ b/src/app/index.css
@@ -23,21 +23,21 @@
 }
 
 .blue-grey-text.text-darken-2 {
-  color: #646464 !important; 
+    color: #646464 !important;
 }
 
 .colorMain {
-    background: linear-gradient(10deg, rgba(100, 100, 100, 1), rgba(60,63,65, 1));
+    background: linear-gradient(10deg, rgba(100, 100, 100, 1), rgba(60, 63, 65, 1));
     overflow: hidden;
 }
 
 .colorSecondary {
-    background: linear-gradient(10deg, rgba(140, 190, 100, 1), rgba(102,187,106, 1));
-  /*  overflow: hidden; */
+    background: linear-gradient(10deg, rgba(140, 190, 100, 1), rgba(102, 187, 106, 1));
+    /*  overflow: hidden; */
 }
 
 .colorAccent {
-    background: linear-gradient(10deg, rgba(239,83,80, 1), rgba(239,83,80, 1));
+    background: linear-gradient(10deg, rgba(239, 83, 80, 1), rgba(239, 83, 80, 1));
     overflow: hidden;
 }
 
@@ -577,14 +577,16 @@ table.super-fancy tr.foobar {
     top: 0;
     left: 0;
 }
+
 .fs-loader h1 {
 
     position: absolute;
-    top : 200px;
+    top: 200px;
     width: 100%;
     color: white;
     text-align: center;
 }
+
 /* http://codepen.io/anon/pen/JGQQwX */
 .fs-loader ul, .fs-loader li {
     list-style: none;
@@ -592,6 +594,7 @@ table.super-fancy tr.foobar {
     padding: 0;
     margin: 0;
 }
+
 .show-area {
     z-index: 999;
     height: 1.2em;
@@ -601,7 +604,7 @@ table.super-fancy tr.foobar {
     color: white;
     text-align: center;
     position: absolute;
-    top : 400px;
+    top: 400px;
     overflow: hidden;
     font-size: 3em;
 }
@@ -631,6 +634,7 @@ table.super-fancy tr.foobar {
     -moz-animation: slide linear 1s;
     -moz-animation-iteration-count: infinite;
 }
+
 @-webkit-keyframes marqee {
     0% {
         top: .5em;
@@ -639,6 +643,7 @@ table.super-fancy tr.foobar {
         top: -9.5em;
     }
 }
+
 @-moz-keyframes marqee {
     0% {
         top: 0.5em;
@@ -701,6 +706,7 @@ table.super-fancy tr.foobar {
         transform: rotate(0deg) scaleX(1) scaleY(1) skewX(0deg) skewY(0deg);
     }
 }
+
 @-webkit-keyframes check {
     0% {
         height: 0;
@@ -715,6 +721,7 @@ table.super-fancy tr.foobar {
         width: 10px;
     }
 }
+
 @-moz-keyframes check {
     0% {
         height: 0;
@@ -729,6 +736,7 @@ table.super-fancy tr.foobar {
         width: 10px;
     }
 }
+
 @-ms-keyframes check {
     0% {
         height: 0;
@@ -743,6 +751,7 @@ table.super-fancy tr.foobar {
         width: 10px;
     }
 }
+
 @keyframes check {
     0% {
         height: 0;
@@ -757,10 +766,12 @@ table.super-fancy tr.foobar {
         width: 10px;
     }
 }
+
 .compare-modale canvas#line {
     width: 100% !important;
     height: 200px !important;
 }
+
 .notification.dropdown-content {
     display: none;
     min-width: 300px; /* Changed this to accomodate content width */
@@ -772,35 +783,52 @@ table.super-fancy tr.foobar {
     min-height: 0;
     padding: 0;
 }
+
 .notification.dropdown-content div {
     padding: 10px 20px;
     line-height: 1rem;
 }
+
 .notification.dropdown-content div.row, .notification.dropdown-content div.col {
     padding: 0;
     margin: 0;
     line-height: 1rem;
 }
-.notification.dropdown-content a>i.material-icons {
+
+.notification.dropdown-content a > i.material-icons {
     padding: 5px;
     line-height: 1rem;
     font-size: 1rem;
 }
+
 .notification.dropdown-content a {
     padding: 0;
     margin: 0;
 }
+
 .notification:after {
-    content:'';
-    display:block;
-    position:absolute;
-    top:-20px; /*should be set to -border-width x 2 */
-    right:31px;
-    width:0;
+    content: '';
+    display: block;
+    position: absolute;
+    top: -20px; /*should be set to -border-width x 2 */
+    right: 31px;
+    width: 0;
     text-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    height:0;
+    height: 0;
     /*border color should be same as div div background color*/
     border: 10px solid transparent;
     border-bottom-color: white;
 
+}
+
+.widget-content {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+.widget-header {
+    padding: 5px !important;
+}
+.widget {
+    padding: 5px;
 }
