--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -1,8 +1,20 @@
 <!-- cup, championship, friendly game -->
-<div class="card">
-    <div class="colorSecondary card-content">
-        <div class="row" ng-repeat="player in players">
-            {{player.firstname}} {{player.name}} - {{player.nbGoal}}
+<div class="card-content">
+        <div class="row center-align">
+            <div class="col s4">
+                <simple-avatar person="players[1]" link="('#/private/viewPlayer/' + players[1]._id)" width="'75px'"></simple-avatar> 
+                <br> {{players[1].firstname}}
+                <br> <h5>{{players[1].nbGoal}}</h5>
+            </div>
+            <div class="col s4">
+                <simple-avatar person="players[0]" link="('#/private/viewPlayer/' + players[0]._id)" width="'100px'"></simple-avatar>
+                <br> {{players[0].firstname}}
+                <br> <h4>{{players[0].nbGoal}}</h4>
+            </div>
+            <div class="col s4">
+                <simple-avatar person="players[2]" link="('#/private/viewPlayer/' + players[2]._id)" width="'50px'"></simple-avatar>
+                <br> {{players[2].firstname}}
+                <br> <h6>{{players[2].nbGoal}}</h6>
+            </div>
         </div>
-    </div>
 </div>
