--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -7,10 +7,12 @@
             <div dashboard="dashboardOptions" class="dashboard-container" template-url="app/components/directives/widgets/dashboardHome.html"></div>
         </div>
     </div>
+    
     <!-- body start-->
+    <!--
     <div class="row">
         <div class="col s12">
-            <!-- Collecte-->
+            <!-- Collecte
             <div>
                 <h5 class="header red-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.stats' |
                     translate }}</h5>
@@ -39,6 +41,7 @@
             </ul>
         </div>
     </div>
+    -->
     <div class="row">
         <div class="col s12">
             <div><h5 class="header red-text text-lighten-1"><i class="fa fa-calendar left"></i>{{'dashboard.event' |
