--- a/src/app/components/directives/widgets/notifications/notifications.html
+++ b/src/app/components/directives/widgets/notifications/notifications.html
@@ -1,3 +1,5 @@
+<a href="#/notifications" class="waves-effect waves-teal btn-flat white-text">{{'notifications.more' | translate}} <i
+        class="material-icons right">forward</i></a>
 <ul class="collection grey-text text-darken-2">
     <li class="collection-item avatar" ng-repeat="n in notifications">
         <img ng-src="{{getAvatar(n.from_user_id.avatar)}}" alt="" class="circle">
