--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -272,7 +272,7 @@
            translate="commons.buttons.close"></a>
     </div>
 </div>
-<div id='notificationDropdown' class='notification dropdown-content' ng-if="notifications.length > 0">
+<div id='notificationDropdown' class='notification dropdown-content'>
     <div class="row" style="padding-left: 10px">
         <div class="col s12"><a href="#/notifications" class="waves-effect waves-teal btn-flat">
             {{'notifications.more' | translate}} <i class="material-icons right">forward</i></a>
