--- a/src/app/index.css
+++ b/src/app/index.css
@@ -827,5 +827,19 @@ table.super-fancy tr.foobar {
     width: 100%;
 }
 .widget-header {
-    padding: 5px !important;
+    padding: 10px !important;
 }
+
+.card .card-content {
+    padding: 10px !important;
+}
+
+.card .card-content .card-title {
+    line-height: 24px;
+}
+.card .card-title {
+    font-size: 24px;
+    font-weight: 300;
+}
+
+
