--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -41,12 +41,12 @@
             </ul>
         </div>
     </div>
-    -->
+    
     <div class="row">
         <div class="col s12">
             <div><h5 class="header red-text text-lighten-1"><i class="fa fa-calendar left"></i>{{'dashboard.event' |
                 translate }}</h5></div>
-            <!-- Event -->
+            <!-- Event
             <div ng-if="events.length > 0">
                 <div>
                     <div class="card white">
@@ -89,5 +89,6 @@
         </div>
 
     </div>
+    -->
     <!-- body end-->
 </div>
