--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -13,83 +13,77 @@
         </div>
         
         <div class="col s2">&nbsp;</div>
-        
-            <ul class="tabs" tabs>
-                <li class="tab col s6"><a class="active" href="#dashboardEff">{{'tabEffectif.dashboard' | translate }}</a></li>
-                <li class="tab col s6"><a href="#listPlayer">{{'tabEffectif.Listplayer' | translate }}</a></li>
-            </ul>
+            <v-tabs class="tabs" horizontal active="activeTabIndex">
+                <v-tab class="tab"><a ng-href="" ng-class="{'active': activeTabIndex === 0}">{{'tabEffectif.dashboard' | translate }}</a></v-tab>
+                <v-tab class="tab"><a ng-href="" ng-class="{'active': activeTabIndex === 1}">{{'tabEffectif.Listplayer' | translate }}</a></v-tab>
+            </v-tabs>
+            
         
     </div>
     <!-- entete end -->
 
     <div class="row">
-
-        <!-- tab List player -->
-        <div id="dashboardEff" class="col s12">
-            <br>
-            <div>
-                <div dashboard="dashboardOptions" class="dashboard-container" template-url="app/components/directives/widgets/dashboardHome.html"></div>
-            </div>
-        </div>
-        <!-- tab List player -->
         
-        <!-- tab List player -->
-        <div id="listPlayer">
-            <div class="col s8">
-                <form class="forms forms-inline input-field">
-                    <input type="text" id="queryPlayer" class="grey lighten-4" ng-model="queryPlayer">
-                    <label for="queryPlayer">Filter</label>
-                </form>
-            </div>
-            
-            <div class="col s4 center-align">
-                <br>
-                <a href="#/private/addPlayer/{{meta._id}}" class="waves-effect waves-light btn colorAccent">
-                    <i class="material-icons">add</i>
-                </a>
-                
-                <button ng-click="compare()" title="{{'mainEffective.buttons.compare' | translate}}" class="waves-effect waves-light btn colorAccent">
-                    <i class="material-icons">recent_actors</i>
-                </button>
+        <v-pages class="vPages--default" active="activeTabIndex">
+            <v-page>
+                <div dashboard="dashboardOptions" class="dashboard-container" template-url="app/components/directives/widgets/dashboardHome.html"></div>
+            </v-page>
+            <v-page>
+                <div class="col s8">
+                    <form class="forms forms-inline input-field">
+                        <input type="text" id="queryPlayer" class="grey lighten-4" ng-model="queryPlayer">
+                        <label for="queryPlayer">Filter</label>
+                    </form>
+                </div>
 
-        </div>
+                <div class="col s4 center-align">
+                    <br>
+                    <a href="#/private/addPlayer/{{meta._id}}" class="waves-effect waves-light btn colorAccent">
+                        <i class="material-icons">add</i>
+                    </a>
+
+                    <button ng-click="compare()" title="{{'mainEffective.buttons.compare' | translate}}" class="waves-effect waves-light btn colorAccent">
+                        <i class="material-icons">recent_actors</i>
+                    </button>
+                </div>
 
 
-            <div class="col s12">&nbsp;</div>
+                <div class="col s12">&nbsp;</div>
 
-            <ul>
-                <li class="col l3 m6 s12" ng-repeat="player in players | filter:queryPlayer">
-                    <div class="card white blue-grey-text text-darken-2">
-                        <div class="card-content center-align colorMain">
+                <ul>
+                    <li class="col l3 m6 s12" ng-repeat="player in players | filter:queryPlayer">
+                        <div class="card white blue-grey-text text-darken-2">
+                            <div class="card-content center-align colorMain">
 
-                            <a href="#/private/viewPlayer/{{player._id}}">
-                                <avatar person="player" width="'50px'"></avatar>
-                            </a>
-                            <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="white-text">
-                                <small>{{player.firstname}} {{player.name}}</small></a></span>
-                        </div>
-                        <div class="card-content center-align">
-                            <h5><small><a href="#/private/viewPlayer/{{player._id}}">{{player.positionType}}</a></small></h5>
-                        </div>
+                                <a href="#/private/viewPlayer/{{player._id}}">
+                                    <avatar person="player" width="'50px'"></avatar>
+                                </a>
+                                <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="white-text">
+                                    <small>{{player.firstname}} {{player.name}}</small></a></span>
+                            </div>
+                            <div class="card-content center-align">
+                                <h5><small><a href="#/private/viewPlayer/{{player._id}}">{{player.positionType}}</a></small></h5>
+                            </div>
 
-                        <div class="card-action">
-                            <a href="#/private/playerStats/{{player._id}}"
-                               class="btn waves-effect waves-light red lighten-1 white-text">
-                                <i class="fa fa-bar-chart"></i>
-                            </a>
+                            <div class="card-action">
+                                <a href="#/private/playerStats/{{player._id}}"
+                                   class="btn waves-effect waves-light red lighten-1 white-text">
+                                    <i class="fa fa-bar-chart"></i>
+                                </a>
 
-                            <div class="right">
-                                <input type="checkbox" ng-model="compareList[player._id]" name="compare"
-                                       ng-change="updatePlayerToCompare(player._id)"
-                                       ng-checked="compareList[player._id]" id="compare-{{player._id}}"/>
-                                <label for="compare-{{player._id}}"></label>
+                                <div class="right">
+                                    <input type="checkbox" ng-model="compareList[player._id]" name="compare"
+                                           ng-change="updatePlayerToCompare(player._id)"
+                                           ng-checked="compareList[player._id]" id="compare-{{player._id}}"/>
+                                    <label for="compare-{{player._id}}"></label>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <!-- tab List player -->
+                    </li>
+                </ul>
+            </v-page>
+        </v-pages>
+        
     </div>
 
     <!-- body end-->
